# STAT-4830-mri-reconstruction-project

./: .gitignore  README.md  pyproject.toml  run.py  run_ipynb.py
docs/assignments/: Week 10 Report.md  Week 12 Report.md  Week 9 Slides.pptx  week6_report.md  week8_report.md
docs/llm_exploration/: week10_llm.md  week6_log.md  week8_log.md
notebooks/: SRCNN MFCNN.ipynb  Week 10 Multi-Image Notebook.ipynb  Week 12 Notebook.ipynb  Week 12 Self Supervised Notebook v1.ipynb  Week 12 Self Supervised Notebook v2.ipynb  Week 4 Notebook.ipynb  Week 5 Notebook.ipynb  Week_10_Notebook_Multi_Image.ipynb  Week_5_Notebook.ipynb  Week_8_Notebook.ipynb
results/notebook_runs/20260409_191733/: combined_summary.json
scripts/notebook_pipeline/: notebook_batch_utils.py  run_all_exports.py  run_all_ipynb.py  visualize_notebook_runs.py  visualize_reconstructions.py
scripts/notebook_pipeline/exports/: manifest.example.txt  week12_self_supervised_colab.py
src/mri_recon/: __init__.py  benchmark.py  cli.py  config.py  data_pipeline.py  kspace_ops.py  metrics.py  visualize.py
src/mri_recon/experiments/: __init__.py  acceleration.py  acceleration_sweep.py  common.py  data_budget.py  data_efficiency_sweep.py  head_to_head.py  leaderboard.py
src/mri_recon/models/: __init__.py  diffusion.py  learned_pgd.py  method.py  ss_diffusion.py  zero_filled.py
src/mri_recon/reconstructors/: __init__.py  base.py  classical.py  diffusion.py  kernels.py  networks.py  (+4 more)
tests/: test_data_pipeline.py  test_diffusion.py  test_metrics.py  test_presentation_config.py  test_spec_pipeline.py  test_ssdiff.py
(+9 files in other folders)
