[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mri-recon"
version = "0.1.0"
description = "MRI reconstruction comparative experiments (STAT 4830)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
  "matplotlib>=3.7",
  "pydicom>=2.4",
  "tcia-utils>=3.0",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
mri-recon = "mri_recon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
