[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-4830-mri-reconstruction"
version = "0.2.0"
description = "STAT 4830 MRI project — Colab notebook exports + course materials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
  "matplotlib>=3.7",
  "pydicom>=2.4",
  "tcia-utils>=3.0",
  "tqdm>=4.65",
]

[project.optional-dependencies]
notebook = ["scikit-image>=0.21", "pandas>=2.0"]
# Batch-execute local .ipynb trees (nbconvert + kernel) + comparison plots
notebook-run = ["nbconvert>=7", "nbformat>=5", "ipykernel>=6"]
dev = ["ruff>=0.1"]

[tool.setuptools]
packages = []
